syntax = "proto3";

option csharp_namespace = "GrpcServerRPS";

service User {

	rpc Login (UserLoginLookupModel) returns (UserLoginModel);

	rpc Regist (UserRegistLookupModel) returns (UserRegistModel);

	rpc UserIdByUserSessionId (UserIdByUserSessionIdLookupModel) returns (UserIdByUserSessionIdModel);

	rpc GetUserBySessionId (UserGetUserBySessionIdLookupModel) returns (UserGetUserBySessionIdModel);

}

message UserLoginLookupModel {
	
	string username = 1;
	string password = 2;

}

message UserRegistLookupModel {
	
	string username = 1;
	string email = 2;
	string password = 3;

}

message UserIdByUserSessionIdLookupModel {
	string sessionID = 1;
	string username = 2;
}

message UserGetUserBySessionIdLookupModel {
	string sessionID = 1;
	string username = 2;
}


message UserLoginModel {
	
	bool valid = 1;  // True: Login feito com sucesso, False: Utilizador/Password errados
	string sessionID = 2;
}

message UserRegistModel {
	
	int32 valid = 1;	// 1: Válido, -1: Username já existente, -2: Email já existente, 3: Username e email já existentes
}

message UserIdByUserSessionIdModel {
	
	int32 userId = 1;
}

message UserGetUserBySessionIdModel {
	
	int32 userId = 1;
	string username = 2;
	string email = 3;
}